Fixes search highlight overlapping tooltips

--- a/src/css/_BRmain.scss
+++ b/src/css/_BRmain.scss
@@ -72,6 +72,7 @@
 .BRcontainer {
   top: 0;
   bottom: 0;
+  z-index: 1;
   width: 100%;
   overflow-x: auto;
   overflow-y: scroll;
